--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -64,7 +64,7 @@ flutter:
 
   assets:
     - assets/images/
-    - assets/animations/
+    # - assets/animations/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
