--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   glassmorphism: ^3.0.0
   fl_chart: ^0.68.0
   file_picker: ^8.0.0+1
+  firebase_core: ^2.25.1
+  cloud_firestore: ^4.15.1
   image_picker: ^1.0.7
 
 dev_dependencies:
